--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -35,8 +35,8 @@ ingress:
   class: nginx
   issuer: letsencrypt-test
   name: ingress-star-app
-  host1: "www.iiig3t-g00diii.tk"
-  host2: "iiig3t-g00diii.tk"
+  host1: "testing.iiig3t-g00diii.tk"
+  host2: "www.testing.iiig3t-g00diii.tk"
   secretName: tls-secret-test
 
 issuer:
