--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -24,13 +24,6 @@ deployment:
   limitsMemory: "128Mi"
   limitsCpu: "500m"
 
-configmap:
-  name: app-config
-  port: "3000"
-  loglevel: "info"
-  persist: "true"
-  dbname: "restdb"
-
 ingress:
   class: nginx
   issuer: letsencrypt-test
@@ -45,6 +38,17 @@ issuer:
   email: "vjulianiusv@gmail.com"
   privateKeySecretRefName: letsencrypt-test
   class: nginx
+
+pvc:
+  name: standard
+  annotationIsDefaultClass: "true"
+  provisioner: kubernetes.io/aws-ebs
+  type: gp2
+  reclaimPolicy: Delete
+  allowVolumeExpansion: true
+  mountOptions: debug
+  volumeBindingMode: Immediate
+
 
 secret:
   name: mongodburl
