--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -39,15 +39,15 @@ issuer:
   privateKeySecretRefName: letsencrypt-test
   class: nginx
 
-pvc:
-  name: "standard"
-  annotationIsDefaultClass: "true"
-  provisioner: "kubernetes.io/aws-ebs"
-  type: "gp2"
-  reclaimPolicy: "Delete"
-  allowVolumeExpansion: "true"
-  mountOptions: "debug"
-  volumeBindingMode: "Immediate"
+#pvc:
+#  name: "standard"
+#  annotationIsDefaultClass: "true"
+#  provisioner: "kubernetes.io/aws-ebs"
+#  type: "gp2"
+#  reclaimPolicy: "Delete"
+#  allowVolumeExpansion: "true"
+#  mountOptions: "debug"
+#  volumeBindingMode: "Immediate"
 
 
 secret:
