--- a/charts/app/dev.values.yaml
+++ b/charts/app/dev.values.yaml
@@ -12,5 +12,10 @@ ingress:
 deployment:
   image: 751307794059.dkr.ecr.eu-west-3.amazonaws.com/star-app:dev
 
+secret:
+  mongodburl: bW9uZ29kYjovL3Rlc3Q6dGVzdEBtb25nb2RiLWRldi0wLm1vbmdvZGItaGVhZGxlc3M6MjcwMTcsbW9uZ29kYi1kZXYtMS5tb25nb2RiLWhlYWRsZXNzOjI3MDE3L3Jlc3RkYj9hdXRoU291cmNlPXJlc3RkYg==
+
+
+  
 #pvc:
 #  name: "standard-dev"
