--- a/charts/app/release.values.yaml
+++ b/charts/app/release.values.yaml
@@ -12,5 +12,8 @@ ingress:
 deployment:
   image: 751307794059.dkr.ecr.eu-west-3.amazonaws.com/star-app:release-1.0.5
 
+secret:
+  mongodburl: bW9uZ29kYjovL3Rlc3Q6dGVzdEBtb25nb2RiLXJlbGVhc2UtMC5tb25nb2RiLWhlYWRsZXNzOjI3MDE3LG1vbmdvZGItcmVsZWFzZS0xLm1vbmdvZGItaGVhZGxlc3M6MjcwMTcvcmVzdGRiP2F1dGhTb3VyY2U9cmVzdGRi
+
 #pvc:
 #  name: "standard-release"
