--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -24,31 +24,20 @@ deployment:
   limitsMemory: "128Mi"
   limitsCpu: "500m"
 
-#ingress:
-#  class: nginx
-#  issuer: letsencrypt-test
-#  name: ingress-star-app
-#  host1: "testing.iiig3t-g00diii.tk"
-#  host2: "www.testing.iiig3t-g00diii.tk"
-#  secretName: tls-secret-test
+ingress:
+  class: nginx
+  issuer: letsencrypt-test
+  name: ingress-star-app
+  host1: "testing.iiig3t-g00diii.tk"
+  host2: "www.testing.iiig3t-g00diii.tk"
+  secretName: tls-secret-test
 
-#issuer:
-#  name: letsencrypt-test
-#  server: " https://acme-staging-v02.api.letsencrypt.org/directory"
-#  email: "vjulianiusv@gmail.com"
-#  privateKeySecretRefName: letsencrypt-test
-#  class: nginx
-
-#pvc:
-#  name: "standard"
-#  annotationIsDefaultClass: "true"
-#  provisioner: "kubernetes.io/aws-ebs"
-#  type: "gp2"
-#  reclaimPolicy: "Delete"
-#  allowVolumeExpansion: "true"
-#  mountOptions: "debug"
-#  volumeBindingMode: "Immediate"
-
+issuer:
+  name: letsencrypt-test
+  server: " https://acme-staging-v02.api.letsencrypt.org/directory"
+  email: "vjulianiusv@gmail.com"
+  privateKeySecretRefName: letsencrypt-test
+  class: nginx
 
 secret:
   name: mongodburl
