--- a/charts/app/templates/star_app_ingress.yml
+++ b/charts/app/templates/star_app_ingress.yml
@@ -19,7 +19,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: nginx
+                name: star-app
                 port: 
                   number: 5000
     - host: {{ .Values.ingress.host2 }}
@@ -29,6 +29,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: nginx
+                name:  star-app
                 port: 
                   number: 5000
