--- a/charts/mongodb/release.values.yml
+++ b/charts/mongodb/release.values.yml
@@ -11,3 +11,10 @@ auth:
 
 pvc:
   name: "standard-release"
+
+metrics:
+  enabled: true
+  serviceMonitor:
+    enabled: true
+    additionalLabels:
+      monitoring-platform: core-prometheus
