--- a/charts/mongodb/stg.values.yml
+++ b/charts/mongodb/stg.values.yml
@@ -11,3 +11,10 @@ auth:
 
 pvc:
   name: "standard-stg"
+  
+metrics:
+  enabled: true
+  serviceMonitor:
+    enabled: true
+    additionalLabels:
+      monitoring-platform: core-prometheus
