--- a/charts/nginx/values.yaml
+++ b/charts/nginx/values.yaml
@@ -1,6 +1,7 @@
 replicaCount: 1
 image:
   repository: 751307794059.dkr.ecr.eu-west-3.amazonaws.com/star-app-nginx:latest
+  pullPolicy: IfNotPresent
 imagePullSecrets: []
 nameOverride: ''
 fullnameOverride: ''
