--- a/charts/nginx/templates/ingress.yaml
+++ b/charts/nginx/templates/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
+    nginx.org/proxy-connect-timeout: '900s'
     kubernetes.io/ingress.class: {{ .Values.ingress.class }}
     cert-manager.io/issuer: {{ .Values.ingress.issuer }}
   name: {{ .Values.ingress.name }}
