--- a/charts/nginx/templates/ingress.yaml
+++ b/charts/nginx/templates/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     cert-manager.io/issuer: {{ .Values.ingress.issuer }}
   name: {{ .Values.ingress.name }}
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - {{ .Values.ingress.host1 }}
