--- a/charts/app/templates/star_app_serviceaccount.yaml
+++ b/charts/app/templates/star_app_serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "todo.serviceAccountName" . }}
+  name: {{ include "star-app.serviceAccountName" . }}
   labels:
-    {{- include "todo.labels" . | nindent 4 }}
+    {{- include "star-app.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
